// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail should render with a specific image 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  />
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Arget"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Arget
    </span>
  </a>
   
</div>
`;

exports[`Thumbnail should render with no photo 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  />
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Dlanor S"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Dlanor S
    </span>
  </a>
   
</div>
`;

exports[`Thumbnail should render without attribution 1`] = `
<div
  className="thumbnail"
>
   
  <a
    className="slug"
  />
   
   
  <a
    className="badge linked"
    title="Download free do whatever you want high-resolution photos from Arget"
  >
    <span
      className="source-logo"
    >
      <img
        alt="unsplash"
        src="/unsplash.svg"
      />
    </span>
    <span
      className="attribute"
    >
      Arget
    </span>
  </a>
   
</div>
`;
